--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   background-color: #36393f;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 800;
 }
 body {
   width: 100%;
@@ -14,7 +15,7 @@ body {
   height: min-content;
   display: grid;
   grid-template-columns: repeat(62, 40px);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: min-content repeat(3, 1fr);
 }
 .timeline2 {
   background: repeating-linear-gradient(
@@ -26,6 +27,7 @@ body {
   );
   width: calc(40px * 62);
   grid-column: 2/-1;
+  padding-bottom: 10px;
   display: grid;
   grid-template-columns: subgrid;
   grid-auto-rows: 40px;
@@ -45,10 +47,19 @@ body {
     margin-right: 10px;
     margin-left: 2px;
     padding: 10px;
+    position: relative;
     grid-column: var(--start) / span var(--duration);
+    .time {
+      position: absolute;
+      left: calc(100% + 10px);
+      background-color: white;
+      color: black;
+      padding: 0 4px;
+      border-radius: 12px;
+    }
     > span {
       position: sticky;
-      left: 0;
+      left: 10px;
     }
   }
 }
@@ -116,4 +127,5 @@ body {
   height: calc(100% - 100px);
   position: relative;
   left: calc(40px * var(--now));
+  z-index: 100;
 }
