--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body {
 }
 #main {
   overflow-x: scroll;
-  padding: 0 100px;
+  padding: 0 2rem;
   padding-bottom: 100px;
   height: min-content;
   display: grid;
   grid-template-columns: repeat(62, 40px);
-  grid-template-rows: min-content repeat(3, 1fr);
+  grid-template-rows: min-content repeat(3, min-content);
 }
-.timeline2 {
+.timeline {
   background: repeating-linear-gradient(
     to right,
     black,
@@ -27,7 +27,7 @@ body {
   );
   width: calc(40px * 62);
   grid-column: 2/-1;
-  padding-bottom: 10px;
+  padding-top: 10px;
   display: grid;
   grid-template-columns: subgrid;
   grid-auto-rows: 40px;
@@ -59,61 +59,21 @@ body {
     }
     > span {
       position: sticky;
-      left: 10px;
-    }
-  }
-}
-
-.timeline {
-  color: white;
-
-  width: calc(40px * 62);
-  background: repeating-linear-gradient(
-    to right,
-    black,
-    black 1px,
-    transparent 1px,
-    transparent 40px
-  );
-  /* outline: 1px red solid; */
-  display: grid;
-  grid-template-columns: subgrid;
-  grid-template-rows: repeat(auto-fit, 40px);
-  row-gap: 10px;
-  padding-bottom: 10px;
-
-  .event {
-    color: white;
-    background-color: #7289da;
-    width: auto;
-    height: auto;
-    border-radius: 12px;
-    margin-right: 10px;
-    margin-left: 2px;
-    padding: 10px;
-    grid-column: var(--start) / span var(--duration);
-    > span {
-      position: sticky;
       left: 0;
     }
   }
-
-  .day,
-  .weekday {
-    /* background-color: white; */
-    /* outline: 1px red solid; */
-    width: min-content;
-    height: min-content;
-    position: relative;
-    left: -5px;
-  }
-  .day {
-    grid-row-start: 2;
-  }
-  .weekday {
-    grid-row-start: 1;
+}
+.timeline-label {
+  background-color: #36393f;
+  height: 100%;
+  color: white;
+  grid-column: 1/-1;
+  > span {
+    position: sticky;
+    left: -10px;
   }
 }
+
 #labels {
   background: none;
 }
