--- a/style.css
+++ b/style.css
@@ -5,19 +5,24 @@
 }
 body {
   width: 100%;
-  height: 100vh;
+  height: calc(100dvh - env(safe-area-inset-bottom));
   margin: 0;
+  /* margin: 0 0 env(safe-area-inset-bottom); */
 }
 #main {
   overflow-x: scroll;
-  padding: 0 5vw;
-  /* padding-bottom: 1rem; */
+  scrollbar-width: none;
   height: 100%;
+  padding: 0 5vw;
   display: grid;
   grid-template-columns: repeat(calc(92 * 48), 1px);
   grid-template-rows: min-content repeat(5, min-content);
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 .timeline {
+  scroll-margin-top: 100px;
   background: repeating-linear-gradient(
       to right,
       rgba(0, 0, 0, 0.5),
@@ -122,4 +127,21 @@ body {
   position: relative;
   left: calc(1px * var(--now));
   z-index: 200;
+}
+
+nav {
+  width: max-content;
+  position: sticky;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  a {
+    width: max-content;
+    text-decoration: none;
+    color: white;
+    background-color: red;
+    outline: 1px white solid;
+    border-radius: 10px 10px 0 0;
+    padding: 0 10px;
+  }
 }
